--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@ code {
 .icon {
   cursor: pointer;
 }
+
+.delete-icon {
+  color: black; /* Default color */
+  transition: color 0.3s ease-in-out;
+}
+
+.delete-icon:hover {
+  color: red; /* Change to red on hover */
+}
+
+.edit-icon {
+  color: black; /* Default color */
+  transition: color 0.3s ease-in-out;
+}
+
+.edit-icon:hover {
+  color: blue; /* Change to blue on hover */
+}
